Fix postgres url

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql+psycopg://kinderhub:kinderhub_pass123@localhost:5432/kinderhub
+DATABASE_URL="postgresql+psycopg://kinderhub:5022@localhost:5432/kinderhub"
